# Market-Lens

./: .commit_history  .gitignore  Github.docx  README.md  Report.docx  create_commit_history.py  push_to_github.py  pyproject.toml  requirements.txt
Analysis/: Hypothesis_Testing.py  README.md  lime_explanations.json  marketing_channel.ipynb
Budget Allocation/: Budget_Allocation_Time_Series.ipynb  Budget_Bioptimisation.ipynb  README.md  Robyn.ipynb
Channel Allocation/: Product_Wise_Channel_Allocation.ipynb
Dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vite.config.ts.timestamp-1742119006715-758a8ecc1d1aa.mjs  vite.config.ts.timestamp-1742474230022-8d10e74a341c1.mjs
Dashboard/.firebase/: hosting..cache  hosting.WQ.cache  hosting.ZGlzdA.cache  hosting.eQ.cache
Dashboard/public/assets/: report.md
Dashboard/public/data/: Channel_ROI_analyses.json  Top_performing_marketing_channels.json  Top_performing_marketing_channels_next_month.json  correlation_with_revenue.json  dashboardData.json  holiday_data.json  monthly_roi.json  prepaid_vs_cod.json  sales_vs_non_sales_monthly.json
Dashboard/src/: App.tsx  index.css  vite-env.d.ts
Dashboard/src/components/: chart-card.tsx  dashboard-layout.tsx  data-upload-card.tsx  footer.tsx  header.tsx  loading-animation.tsx  logo.tsx  marketing-chart.tsx  page-header.tsx  sidebar.tsx  stats-card.tsx
Dashboard/src/contexts/: AuthContext.tsx  DashboardContext.tsx
Dashboard/src/pages/: Index.tsx  NotFound.tsx  appendix.tsx  budget-allocation.tsx  business-context.tsx  executive-summary.tsx  implementation.tsx  login.tsx  marketing-performance.tsx  marketing-roi.tsx  performance-drivers.tsx  report.tsx  signup.tsx
Dashboard/supabase/: config.toml
Pipeline/: Customers_Bivariate_EDA.py  Customers_Univariate_EDA.py  Feature.py  Investment_EDA.py  README.md  SKU_EDA.py  Weather_Analysis_EDA.py  main.py  master_data.py
Report Generation/: .gitignore  README.md  main.py  pyproject.toml
Report Generation/agents/: budget.py  compiler.py  exploration.py  generator.py  kpi.py  market_analysis.py  report_generation.py  report_generator.py  roi.py  sql.py  supervisor.py  tavily_search.py
Report Generation/agents/plots/: channel_roi_metrics_20250321_134101.json  monthly_roi_metrics_20250321_134101.json
Report Generation/reports/: channel_roi_analysis.txt  nps_roi_analysis.txt  report.md  roi_analysis_summary.txt  stock_index_roi_analysis.txt
Report Generation/test/: panda.py
Report Generation/utils/: clean.py  data_manager.py  report.py  report_to_pdf.py
Sales Allocation/: sales.ipynb
(+9 files in other folders)
