[project]
name = "GC_Data_2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Mauryavardhan",email = "singhmauryavardhan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-groq (>=0.3.0,<0.4.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "langgraph (>=0.3.18,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "tavily-python (>=0.5.1,<0.6.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "reportlab (>=4.3.1,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "langchain-google-genai (>=2.1.0,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "markdown (>=3.7,<4.0)",
    "weasyprint (>=65.0,<66.0)",
    "pdfkit (>=1.0.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "kaleido (==0.2.1)",
    "robynpy (==0.2.1)",
    "groq (>=0.20.0,<0.21.0)",
    "langchain-core (>=0.3.47,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "altair (>=5.2.0,<6.0.0)",
    "chromedriver-autoinstaller (>=0.6.3,<0.7.0)",
    "selenium (>=4.17.2,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
