 [tool.poetry]
name = "marketing-report"
version = "0.1.0"
description = ""
authors = ["bhveshpabnani <bhaveshpabnani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.20"
langchain-groq = "^0.2.5"
langchain-community = "^0.3.19"
pandas = "^2.2.3"
sqlalchemy = "^2.0.39"
langgraph = "^0.3.10"
langchain-experimental = "^0.3.4"
tabulate = "^0.9.0"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
tavily-python = "^0.5.1"
asyncio = "^3.4.3"
scipy = "^1.15.2"
reportlab = "^4.3.1"
scikit-learn = "^1.6.1"
langchain-google-genai = "^2.1.0"
psutil = "^7.0.0"
markdown = "^3.7"
weasyprint = "^64.1"
pdfkit = "^1.0.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
